--- a/UTBEShop/appsettings.json
+++ b/UTBEShop/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySQL_LOCAL_CONNECTION": "Server=localhost;Database=EShopUTB;User Id=al-doori;Password=ahmed1234"
+    "MySQL_LOCAL_CONNECTION": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=EShopUTB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
